| Summary: | ASTERISK-25627: Easily Preventable Compile Warning | ||
| Reporter: | Diederik de Groot (dkdegroot) | Labels: | |
| Date Opened: | 2015-12-15 06:30:33.000-0600 | Date Closed: | 2016-04-25 09:48:57 |
| Priority: | Trivial | Regression? | No |
| Status: | Closed/Complete | Components: | Core/General |
| Versions: | 1.8.32.3 11.20.0 13.6.0 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | BSD / Non-linux / gcc-5 / -Wshadow | Attachments: | |
| Description: | {noformat}
GCC-5 In file included from /usr/local/include/asterisk/poll-compat.h:82:0, from /usr/local/include/asterisk/channel.h:128, from /usr/local/include/asterisk/pbx.h:26, /usr/local/include/asterisk/select.h: In function 'ast_select': /usr/local/include/asterisk/select.h:88:18: warning: declaration of 'tv' shadows a global declaration [-Wshadow] struct timeval tv, tvstart, tvend, tvlen; ^ In file included from /usr/local/include/asterisk/utils.h:33:0, /usr/local/include/asterisk/time.h:35:23: note: shadowed declaration is here extern struct timeval tv; ^ {noformat} Re-use of 'tv' variable name in poll-compat.h:82, also declared globally in time.h:35 | ||
| Comments: | By: Asterisk Team (asteriskteam) 2015-12-15 06:30:35.549-0600 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. By: Joshua C. Colp (jcolp) 2015-12-20 18:07:38.904-0600 [~dkdegroot] Are you planning on creating a patch for this? By: Diederik de Groot (dkdegroot) 2015-12-28 05:16:31.008-0600 I was away for a couple of days. I will create a patch and send via gerrit review By: Diederik de Groot (dkdegroot) 2015-12-28 10:01:55.032-0600 Do not have access to the internal issue database, should i still create a patch, or is this already being worked on ? If so, please close this issue. By: Joshua C. Colp (jcolp) 2015-12-28 10:16:42.954-0600 Nothing has been done with this issue. Any updates always go on the public issue. By: Diederik de Groot (dkdegroot) 2016-01-07 04:20:25.714-0600 Sorry it took a little longer to get around to it. First review against git master in: https://gerrit.asterisk.org/1923 Should be easy to backport to earlier version once accepted. Should i create the backport reviews as well (once this one is accepted), or can this be done automatically ? | ||